<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SplashScreen"
    android:fitsSystemWindows="false"
    android:background="@drawable/splash">

    <TextView
        android:id="@+id/tv_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/odin_rounded_bold"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/iv_icons"
        android:contentDescription="@string/icons_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:src="@drawable/emoticons"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/tv_created_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_love_from_the_qweek_company"
        android:textColor="@color/white"
        android:fontFamily="@font/odin_rounded_bold"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
