<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/optTitleSheetTxt"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/contentTextColor"
                android:text="@string/change_password"
                android:fontFamily="@font/avenir_next_cyr_regular"
                android:textSize="24dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/oldPasswordSheetTxt"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                style="@style/modifiedEditText"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/contentTextColor"
                android:textSize="16sp"
                android:hint="@string/current_password"
                android:importantForAutofill="no"
                android:textColorHint="@color/SlateGray"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/newPasswordSheetTxt"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                style="@style/modifiedEditText"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/contentTextColor"
                android:textSize="16sp"
                android:hint="@string/new_password"
                android:importantForAutofill="no"
                android:textColorHint="@color/SlateGray"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/repeatPasswordSheetTxt"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                style="@style/modifiedEditText"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/contentTextColor"
                android:textSize="16sp"
                android:hint="@string/confirm_new_password"
                android:importantForAutofill="no"
                android:textColorHint="@color/SlateGray"
                android:layout_marginTop="10dp"/>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/optPasswordSheetSaveButton"
                style="@style/loginButton"
                app:spinning_bar_width="4dp"
                app:spinning_bar_color="#FFF"
                android:text="@string/options_save"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:initialCornerAngle="27dp"
                app:spinning_bar_padding="6dp"/>

            <View
                android:id="@+id/extraSpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>